# Tkinter-Designer

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  FUNDING.yml  LEARN.md  LICENSE  Makefile  README.md  backend.py  instructions.md  js.json  main.py  pyproject.toml  readme.md  requirements.txt  setup.cfg  test.py  tkinter_designer.py  window.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: blank-screen-without-any-elements.md  bug-report.md  feature-request.md  key-error.md
.github/workflows/: build.yml  greetings.yml  lint_python.yml  main.yml
docs/: CONTRIBUTING.md  LEARN.md  README.ar-DZ.md  README.ban-BAN.md  README.bn-BN.md  README.fr-FR.md  README.gu-GU.md  README.hin-HIN.md  README.id-ID.md  README.it-IT.md  README.kr-KR.md  README.mr-MR.md  README.pt-BR.md  README.ru-RU.md  README.spa-SPA.md  README.tr-TR.md  README.vi-VN.md  README.zh-CN.md  README_gu.md  build.md  instructions.ar-DZ.md  instructions.ban-BAN.md  instructions.de-DE.md  instructions.fr-FR.md  instructions.gu-GU.md  instructions.it-IT.md  instructions.kr-KR.md  instructions.md  instructions.pt-BR.md  instructions.ru-RU.md  instructions.spa-SPA.md  instructions.tr-TR.md  instructions.vi-VN.md  instructions.zh-CN.md  instructions.zn-ch.md  learn.md  readme.fr-FR.md  readme.gu-GU.md  readme.zh-CN.md  readme.zh-cn.md
gui/: gui.py
src/tkdesigner/: designer.py  utils.py
src/tkdesigner/figma/: frame.py  vector_elements.py
tests/: test_utils.py
tkdesigner/: cli.py  constants.py  designer.py  elements.py  errors.py  figma_api.py  generate.py  gui.py  parse.py  template.py  utils.py
tkdesigner/figma/: README.md  custom.py  custom_elements.py  endpoints.py  frame.py  node.py  vector_elements.py
tkdesigner/figmaAPI/: custom.py  endpoints.py  frame.py  node.py  vector.py
tkdesigner/generator/: custom.py  endpoint.py  frame.py  vector.py
tkdesigner/tkdesigner/: cli.py  constants.py  designer.py
tkdesigner/tkdesigner/figma/: custom_elements.py  frame.py
tkinter-designer/: gui.py
