[metadata]
name = tkdesigner
version = 0.1.1-rc
author = ParthJadhav
author_email = jadhavparth99@gmail.com
description = CLI Package for Tkinter-Designer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ParthJadhav/Tkinter-Designer
project_urls =
    Bug Tracker = https://github.com/ParthJadhav/Tkinter-Designer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires = 
    requests
    jinja2

[options.packages.find]
where = .
exclude = 
    gui

[options.entry_points]
console_scripts =
    tkdesigner = tkdesigner.cli:main